deploy/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app: celery-worker
    group: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
        group: celery
    spec:
      containers:
        - name: celery-worker-container
          image: match-alert-img
          imagePullPolicy: Never
          command: ["celery", "-A", "match_alert.celery_app:queue_app", "worker", "-l", "INFO"]
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
