deploy/firefox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox
  labels:
    group: scraper
spec:
  type: ClusterIP
  selector:
    app: firefox
  ports:
    - port: 4444
      targetPort: 4444
