deploy/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: matchalert.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: match-alert
                port:
                  number: 8000
